--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <label for="floatingPassword">Contraseña</label>
       </div>
       <p><input type="checkbox" name="recordar">Recordarme</p>
-      <button type="submit" class="btn btn-primary btn-lg" id="boton">Enviar</button>
+      <button type="submit" class="btn btn-primary btn-lg" id="boton" href="main.html">Enviar</button>
       
       <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
     
